fix responsive and aligncta

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -293,7 +293,9 @@ a {
   border-radius: 2.5px;
   text-align: center;
   height: 42px;
+  min-width: 140px;
   overflow: hidden;
+  box-sizing: border-box;
 
   &::before {
     content: '';
@@ -376,9 +378,11 @@ a {
   display: flex;
   flex-direction: row;
   gap: 15px;
-
-  * {
+  flex-wrap: wrap;
+  justify-content: center;
+  & > * {
     flex-shrink: 0;
+    flex-grow: 1;
   }
 }
 
@@ -3064,9 +3068,6 @@ span.lineSeparator {
     }
 
     .vimeo {
-      height: 100%;
-      margin: 0;
-
       .iframePlaceholder {
         padding: 1px;
         box-sizing: border-box;
@@ -3577,41 +3578,39 @@ span.lineSeparator {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     cursor: pointer;
 
-    header{
+    padding: 1em;
+    gap: 6px;
+    box-sizing: border-box;
+    filter: drop-shadow(0px 3px 4px #00000012);
 
-      padding: 0.5em 0.8em;
+    &>* {
+      overflow: visible;
+      line-height: initial;
+      margin:0;
       box-sizing: border-box;
-      filter: drop-shadow(0px 3px 4px #00000012);
-
-      & > *{
-        overflow: visible;
-        line-height: initial;
-        margin: 5px 0;
-        box-sizing: border-box;
-        padding: 5px 15px;
-        width: fit-content;
-        opacity: 0;
-        transition:
-          clip-path 0.3s ease-out,
-          opacity 0.2s ease-out,
-          transform 0.3s ease-out;
-        clip-path: inset(0 100% 0 0);
-        transform: translate3d(-10px, 0, 0);
-        border-radius: 2.5px;
-        border: none;
-        background: var(--white);
-        color: var(--purple);
-        letter-spacing: 0.1px;
-      }
-
-      h2 {
-        font-size: 2em;
-        padding-bottom: -10px;
-      }
+      padding: 5px 15px;
+      width: fit-content;
+      opacity: 0;
+      transition:
+        clip-path 0.3s ease-out,
+        opacity 0.2s ease-out,
+        transform 0.3s ease-out;
+      clip-path: inset(0 100% 0 0);
+      transform: translate3d(-10px, 0, 0);
+      border-radius: 2.5px;
+      border: none;
+      background: var(--white);
+      color: var(--purple);
+      letter-spacing: 0.1px;
     }
+
+    h2 {
+      font-size: 2em;
+      padding-bottom: -10px;
+    }
+
 
 
     small {
@@ -3642,7 +3641,7 @@ span.lineSeparator {
       padding-bottom: 0 !important;
       background: var(--black);
 
-      video{
+      video {
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -3687,12 +3686,12 @@ span.lineSeparator {
         opacity: 0;
       }
 
-      .project-desc header>* {
+      header.project-desc>* {
         clip-path: inset(0 0 0 0);
         transform: translate3d(0, 0px, 0);
         opacity: 1;
 
-        &*:nth-child(2) {
+        & *:nth-child(2) {
           transition-delay: 0.2s;
         }
 
@@ -3836,7 +3835,7 @@ img.gradientImg {
         background-color: var(--purple);
       }
 
-      .project-desc header > * {
+      header.project-desc>* {
         clip-path: inset(0 0 0 0);
       }
     }
