--- a/src/styles/midscreen.scss
+++ b/src/styles/midscreen.scss
@@ -158,11 +158,7 @@
     gap: 10%;
 
     #textLetterbox {
-
-      //& > * br{ display: none; }
-      span {
-        margin: 0px 0;
-      }
+      justify-content: center;
 
       h2 {
         font-size: clamp(80px, 15vw, 100px);
@@ -174,10 +170,6 @@
       }
     }
 
-    #iframewrapper {
-      width: 75vw;
-      height: calc(75vw*9/16);
-    }
   }
 
 
